--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,13 +26,13 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt coverage
 
       - name: Prepare data directory
         run: mkdir -p "$STASHCAST_DATA_DIR"
 
-      - name: Download NLTK data
-        run: python -c "import nltk; nltk.download('punkt_tab'); nltk.download('stopwords')"
+      - name: Run tests with coverage
+        run: coverage run manage.py test
 
-      - name: Run tests
-        run: python manage.py test
+      - name: Report coverage
+        run: coverage report -m
