--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ requests>=2.32.5
 numpy>=2.4.0
 scipy>=1.16.3
 watchdog>=6.0.0
+pytest>=9.0.0
+pytest-django>=4.11.0
 honcho>=2.0.0
 beautifulsoup4>=4.12.0
 django-huey-monitor>=0.9.0
