--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
-# Django settings
-SECRET_KEY=your-secret-key-here
+DJANGO_SETTINGS_MODULE=stashcast.settings
+
 DEBUG=True
+
+# SECURITY WARNING: choose a new value for production
+SECRET_KEY="django-insecure-q)n^3l6r8d$@3l^3y11@!m(j=^2n=#=k_4(hmu&rc*si#ce5k1"
+
 ALLOWED_HOSTS=localhost,127.0.0.1
+
+CSRF_TRUSTED_DOMAINS=http://localhost
 
 # Optional: Language code for UI and video subtitles (default: en-us)
 # Supported: en (English), es (Spanish), pt (Portuguese)
@@ -9,11 +15,11 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # STASHCAST Configuration
 # Required: Directories for storing media files
-STASHCAST_AUDIO_DIR=/path/to/audio
-STASHCAST_VIDEO_DIR=/path/to/video
+# STASHCAST_AUDIO_DIR=/path/to/audio
+# STASHCAST_VIDEO_DIR=/path/to/video
 
-# Required: User token for the /stash/ endpoint
-STASHCAST_USER_TOKEN=your-random-user-token-here
+# SECURITY WARNING: choose a new value for production
+STASHCAST_USER_TOKEN=608AF9E5-E989-4729-9C05-7FFB6EA86FE4
 
 # Optional: Require user token for RSS feeds (default: false)
 # Set to 'true' to make feeds private (feed URLs must include ?token=YOUR_TOKEN)
