--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt coverage
+          cp .env.example .env
 
       - name: Prepare data directory
         run: mkdir -p "$STASHCAST_DATA_DIR"
