--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "stashcast"
+version = "0.1.0"
+requires-python = ">=3.13"
+
+[tool.setuptools]
+packages = ["stashcast"]
+
 [tool.ruff]
 exclude = [
   ".git",
