--- a/docker-compose.coolify3.yml
+++ b/docker-compose.coolify3.yml
@@ -7,6 +7,7 @@ services:
       - "traefik.http.services.stashcast.loadbalancer.server.port=80"
       # Disable HTTPS redirect at Traefik level
       - "traefik.http.routers.stashcast.entrypoints=http"
+      - "traefik.http.routers.http-0-${COOLIFY_CONTAINER_NAME:-stash}-caddy.middlewares=gzip"
     ports:
       - "80"
     expose:
